--- a/12. AH_clustering_experiment.ipynb
+++ b/12. AH_clustering_experiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,36 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nadee\\anaconda3\\lib\\site-packages\\sklearn\\utils\\deprecation.py:143: FutureWarning: The sklearn.neighbors.nearest_centroid module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.neighbors. Anything that cannot be imported from sklearn.neighbors is now part of the private API.\n",
-      "  warnings.warn(message, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.neighbors.nearest_centroid import NearestCentroid"
+    "from sklearn.neighbors._nearest_centroid import NearestCentroid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('FINAL_FINAL_SCALED_DATA.csv') \n",
     "\n",
-    "df = pd.DataFrame(data, columns=['feature', 'feature_neutral', 'feature_frequency', 'feature_dissatisfaction','feature_satisfaction', 'hungerstation_e', 'h_dissatisfaction', 'h_satisfaction', 'jahez_e', 'j_dissatisfaction', 'j_satisfaction', 'shgardi_e', 's_dissatisfaction', 's_satisfaction', 'toyou_e', 't_dissatisfaction', 't_satisfaction', 'thechefz_e', 'c_dissatisfaction', 'c_satisfaction'])"
+    "df = pd.DataFrame(data, columns=['feature', 'feature_neutral', 'feature_frequency', 'feature_dissatisfaction','feature_satisfaction'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +73,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Senan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_agglomerative.py:983: FutureWarning: Attribute `affinity` was deprecated in version 1.2 and will be removed in 1.4. Use `metric` instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "cluster = AgglomerativeClustering(n_clusters=3, affinity='euclidean', linkage='ward')\n",
     "y = cluster.fit_predict(points)\n",
@@ -93,11 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": [], 'hungerstation_e': [], 'h_dissatisfaction':[], 'h_satisfaction': [], 'jahez_e': [], 'j_dissatisfaction':[], 'j_satisfaction': [], 'shgardi_e': [], 's_dissatisfaction':[], 's_satisfaction': [], 'toyou_e': [], 't_dissatisfaction':[], 't_satisfaction': [], 'thechefz_e': [], 'c_dissatisfaction':[], 'c_satisfaction': []}\n",
+    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": []}\n",
     "\n",
     "for x in range(len(df)):\n",
     "        table[\"feature\"].append(df['feature'][x])\n",
@@ -108,30 +108,12 @@
     "        table[\"feature_neutral\"].append(df['feature_neutral'][x])\n",
     "        table[\"feature_frequency\"].append(df['feature_frequency'][x])\n",
     "            \n",
-    "        table[\"hungerstation_e\"].append(df['hungerstation_e'][x])\n",
-    "        table[\"h_dissatisfaction\"].append(df['h_dissatisfaction'][x])\n",
-    "        table[\"h_satisfaction\"].append(df['h_satisfaction'][x])\n",
-    "\n",
-    "        table[\"jahez_e\"].append(df['jahez_e'][x])\n",
-    "        table[\"j_dissatisfaction\"].append(df['j_dissatisfaction'][x])\n",
-    "        table[\"j_satisfaction\"].append(df['j_satisfaction'][x])\n",
-    "\n",
-    "        table[\"shgardi_e\"].append(df['shgardi_e'][x])\n",
-    "        table[\"s_dissatisfaction\"].append(df['s_dissatisfaction'][x])\n",
-    "        table[\"s_satisfaction\"].append(df['s_satisfaction'][x])\n",
-    "\n",
-    "        table[\"toyou_e\"].append(df['toyou_e'][x])\n",
-    "        table[\"t_dissatisfaction\"].append(df['t_dissatisfaction'][x])\n",
-    "        table[\"t_satisfaction\"].append(df['t_satisfaction'][x])\n",
-    "\n",
-    "        table[\"thechefz_e\"].append(df['thechefz_e'][x])\n",
-    "        table[\"c_dissatisfaction\"].append(df['c_dissatisfaction'][x])\n",
-    "        table[\"c_satisfaction\"].append(df['c_satisfaction'][x])"
+    "       "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,9 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Senan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_agglomerative.py:983: FutureWarning: Attribute `affinity` was deprecated in version 1.2 and will be removed in 1.4. Use `metric` instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "cluster = AgglomerativeClustering(n_clusters=4, affinity='euclidean', linkage='ward')\n",
     "y = cluster.fit_predict(points)\n",
@@ -159,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": [], 'hungerstation_e': [], 'h_dissatisfaction':[], 'h_satisfaction': [], 'jahez_e': [], 'j_dissatisfaction':[], 'j_satisfaction': [], 'shgardi_e': [], 's_dissatisfaction':[], 's_satisfaction': [], 'toyou_e': [], 't_dissatisfaction':[], 't_satisfaction': [], 'thechefz_e': [], 'c_dissatisfaction':[], 'c_satisfaction': []}\n",
+    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": []}\n",
     "\n",
     "for x in range(len(df)):\n",
     "        table[\"feature\"].append(df['feature'][x])\n",
@@ -173,31 +164,12 @@
     "        table[\"feature_satisfaction\"].append(df['feature_satisfaction'][x])\n",
     "        table[\"feature_neutral\"].append(df['feature_neutral'][x])\n",
     "        table[\"feature_frequency\"].append(df['feature_frequency'][x])\n",
-    "            \n",
-    "        table[\"hungerstation_e\"].append(df['hungerstation_e'][x])\n",
-    "        table[\"h_dissatisfaction\"].append(df['h_dissatisfaction'][x])\n",
-    "        table[\"h_satisfaction\"].append(df['h_satisfaction'][x])\n",
-    "\n",
-    "        table[\"jahez_e\"].append(df['jahez_e'][x])\n",
-    "        table[\"j_dissatisfaction\"].append(df['j_dissatisfaction'][x])\n",
-    "        table[\"j_satisfaction\"].append(df['j_satisfaction'][x])\n",
-    "\n",
-    "        table[\"shgardi_e\"].append(df['shgardi_e'][x])\n",
-    "        table[\"s_dissatisfaction\"].append(df['s_dissatisfaction'][x])\n",
-    "        table[\"s_satisfaction\"].append(df['s_satisfaction'][x])\n",
-    "\n",
-    "        table[\"toyou_e\"].append(df['toyou_e'][x])\n",
-    "        table[\"t_dissatisfaction\"].append(df['t_dissatisfaction'][x])\n",
-    "        table[\"t_satisfaction\"].append(df['t_satisfaction'][x])\n",
-    "\n",
-    "        table[\"thechefz_e\"].append(df['thechefz_e'][x])\n",
-    "        table[\"c_dissatisfaction\"].append(df['c_dissatisfaction'][x])\n",
-    "        table[\"c_satisfaction\"].append(df['c_satisfaction'][x])"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,9 +186,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Senan\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\cluster\\_agglomerative.py:983: FutureWarning: Attribute `affinity` was deprecated in version 1.2 and will be removed in 1.4. Use `metric` instead\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "cluster = AgglomerativeClustering(n_clusters=5, affinity='euclidean', linkage='ward')\n",
     "y = cluster.fit_predict(points)\n",
@@ -225,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": [], 'hungerstation_e': [], 'h_dissatisfaction':[], 'h_satisfaction': [], 'jahez_e': [], 'j_dissatisfaction':[], 'j_satisfaction': [], 'shgardi_e': [], 's_dissatisfaction':[], 's_satisfaction': [], 'toyou_e': [], 't_dissatisfaction':[], 't_satisfaction': [], 'thechefz_e': [], 'c_dissatisfaction':[], 'c_satisfaction': []}\n",
+    "table = {'feature': [], \"cluster\": [], \"feature_dissatisfaction\": [], \"feature_satisfaction\": [], \"feature_neutral\": [], \"feature_frequency\": []}\n",
     "\n",
     "for x in range(len(df)):\n",
     "        table[\"feature\"].append(df['feature'][x])\n",
@@ -240,30 +221,12 @@
     "        table[\"feature_neutral\"].append(df['feature_neutral'][x])\n",
     "        table[\"feature_frequency\"].append(df['feature_frequency'][x])\n",
     "            \n",
-    "        table[\"hungerstation_e\"].append(df['hungerstation_e'][x])\n",
-    "        table[\"h_dissatisfaction\"].append(df['h_dissatisfaction'][x])\n",
-    "        table[\"h_satisfaction\"].append(df['h_satisfaction'][x])\n",
-    "\n",
-    "        table[\"jahez_e\"].append(df['jahez_e'][x])\n",
-    "        table[\"j_dissatisfaction\"].append(df['j_dissatisfaction'][x])\n",
-    "        table[\"j_satisfaction\"].append(df['j_satisfaction'][x])\n",
-    "\n",
-    "        table[\"shgardi_e\"].append(df['shgardi_e'][x])\n",
-    "        table[\"s_dissatisfaction\"].append(df['s_dissatisfaction'][x])\n",
-    "        table[\"s_satisfaction\"].append(df['s_satisfaction'][x])\n",
-    "\n",
-    "        table[\"toyou_e\"].append(df['toyou_e'][x])\n",
-    "        table[\"t_dissatisfaction\"].append(df['t_dissatisfaction'][x])\n",
-    "        table[\"t_satisfaction\"].append(df['t_satisfaction'][x])\n",
-    "\n",
-    "        table[\"thechefz_e\"].append(df['thechefz_e'][x])\n",
-    "        table[\"c_dissatisfaction\"].append(df['c_dissatisfaction'][x])\n",
-    "        table[\"c_satisfaction\"].append(df['c_satisfaction'][x])"
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -288,11 +251,11 @@
      "output_type": "stream",
      "text": [
       "Centroids:\n",
-      "[[0.0197189  0.61995877]\n",
-      " [0.01028791 0.39114392]\n",
-      " [0.02367078 0.13746826]\n",
-      " [1.         1.        ]\n",
-      " [0.05454649 0.00530295]]\n"
+      "[[0.0143012  0.09931127]\n",
+      " [0.03844829 0.58759521]\n",
+      " [0.28532958 0.01651705]\n",
+      " [0.01556327 0.01249315]\n",
+      " [1.         0.        ]]\n"
      ]
     }
    ],
@@ -306,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,16 +287,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 4,  5, 10,  1,  8], dtype=int64)"
+       "array([ 159,   15,   13, 1063,    1], dtype=int64)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,16 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.387661277940202"
+       "1.5801216341980495"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,14 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Silhouette score = 0.5210780321298146\n"
+      "Silhouette score = 0.6546742478244202\n"
      ]
     }
    ],
@@ -451,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calinski Harabasz score = 200.444882000808\n"
+      "Calinski Harabasz score = 1173.7435908438597\n"
      ]
     }
    ],
@@ -493,7 +456,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "71a0637d0666d0ab2b8df844a45a22bf88bda8a7ba40a422949c3405594bb489"
+   }
   }
  },
  "nbformat": 4,
