--- a/13. rand_index.ipynb
+++ b/13. rand_index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,28 +11,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1251"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data = pd.read_csv('all_categories_new_int.csv') \n",
-    "df = pd.DataFrame(data, columns=['feature', 'clustering', 'survey'])"
+    "data = pd.read_csv('ah_4_clusters_2v_NEW.csv') \n",
+    "df = pd.DataFrame(data, columns=['feature', 'cluster', 'survey'])\n",
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clustering = df['clustering'].to_list()\n",
+    "cluster = df['cluster'].to_list()\n",
     "\n",
     "survey = df['survey'].to_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,37 +119,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TP: 69.0\n",
-      "FP: 120.0\n",
-      "TN: 125.0\n",
-      "FN: 64.0\n",
-      "C: 378.0\n",
-      "Precision: 0.36507936507936506\n",
-      "Recall: 0.518796992481203\n",
-      "Accuracy: 0.5132275132275133\n"
+      "1251\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.5132275132275133"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "cannot convert float NaN to integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# clustering with survey\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(survey))\n\u001b[1;32m----> 3\u001b[0m rand_index_score(survey, cluster)\n",
+      "Cell \u001b[1;32mIn[13], line 4\u001b[0m, in \u001b[0;36mrand_index_score\u001b[1;34m(clusters, classes)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mrand_index_score\u001b[39m(clusters, classes):\n\u001b[1;32m----> 4\u001b[0m     tp_plus_fp \u001b[39m=\u001b[39m comb(np\u001b[39m.\u001b[39;49mbincount(clusters), \u001b[39m2\u001b[39m)\u001b[39m.\u001b[39msum()\n\u001b[0;32m      5\u001b[0m     tp_plus_fn \u001b[39m=\u001b[39m comb(np\u001b[39m.\u001b[39mbincount(classes), \u001b[39m2\u001b[39m)\u001b[39m.\u001b[39msum()\n\u001b[0;32m      6\u001b[0m     A \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mc_[(clusters, classes)]\n",
+      "File \u001b[1;32m<__array_function__ internals>:200\u001b[0m, in \u001b[0;36mbincount\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: cannot convert float NaN to integer"
+     ]
     }
    ],
    "source": [
     "# clustering with survey\n",
-    "rand_index_score(survey, clustering)"
+    "print(len(survey))\n",
+    "rand_index_score(survey, cluster)"
    ]
   }
  ],
@@ -157,7 +166,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "71a0637d0666d0ab2b8df844a45a22bf88bda8a7ba40a422949c3405594bb489"
+   }
   }
  },
  "nbformat": 4,
